Ignore make related files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 build/*
+config.*
+Makefile
+sqlite3.pc
+libtool
+parse.*
+fts*
+sqlite3*
+opcodes.*
+.libs/*
+*.o
+.target_source
+keywordhash.h
+lemon
+lempar.c
+libsqlite3.*
+mkkeywordhash
+mksourceid
+shell.c
+tsrc/*
+tsrc
+*.out
+*.db
